# repliagent-mongodb

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  dev-mongod-version.txt  lab.yaml  mongoagent.example.yaml  mongoagent.yaml
.github/workflows/: rust-checks-many.yaml  rust-checks-stable.yaml  rust-deps-audit.yaml
ci/: fetch-binaries.sh  local.sh
src/: cli.rs  client.rs  conf.rs  constants.rs  errors.rs  lib.rs  main.rs  metrics.rs  replicaset.rs  trace.rs
src/client/: admin.rs  mod.rs
src/replicaset/: mod.rs
src/replicaset/actions/: mod.rs
src/replicaset/actions/cluster/: add.rs  init.rs  mod.rs
src/replicaset/info/: address.rs  factory.rs  mod.rs  shard.rs  status.rs  version.rs
